syntax = "proto3";

package agent.v1;

import "google/protobuf/timestamp.proto";

message Agent {
  string id = 1;
  string name = 2;
  bool is_active = 3;
  string token = 5;
  string version = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp last_connection = 9;
}
